[gd_scene load_steps=3 format=3 uid="uid://ign2jnlmqg7p"]

[ext_resource type="Script" path="res://Main.gd" id="1_2tmop"]
[ext_resource type="Script" path="res://addons/godot-playfab/PlayFabEvent.gd" id="2_fwsbt"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tmop")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoginStatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0, 0, 1)
text = "Not logged in"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CatsVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CatsButton" type="Button" parent="VBoxContainer/HBoxContainer/CatsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cats"

[node name="CatCountLabel" type="Label" parent="VBoxContainer/HBoxContainer/CatsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="DogsVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DogsButton" type="Button" parent="VBoxContainer/HBoxContainer/DogsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dogs"

[node name="DogsCountLabel" type="Label" parent="VBoxContainer/HBoxContainer/DogsVBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="PlayFabEvent" type="Node" parent="."]
script = ExtResource("2_fwsbt")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/CatsVBox/CatsButton" to="." method="_on_cats_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DogsVBox/DogsButton" to="." method="_on_dogs_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
